src/test/resources/amyc/parser/failing/FunDefError6.amy
object FunDef
  fn foo(i: Int(32) j: Int(32)): Int = { 42 }
end FunDef
